# src/main/resources/openapi/corrected_openapi.yaml
@@ -156,13 +156,17 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                format: jwt
-            applicatation/xml:
+                type: integer
+                format: int64
+                description: userId
+            application/xml:
               schema:
-                type: string
-                format: jwt
+                type: integer
+                format: int64
+                description: userId
           description: Login successful
+        '404':
+          description: User not found.
 
   # CLIENT
   /clients/{clientId}/purchases:
@@ -329,6 +333,38 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/GetVendorDTO'
+          description: Successful response
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Vendor not found
+
+  /vendors/{vendorId}/business:
+    get:
+      tags:
+        - Vendor
+        - Business
+      summary: Get vendor businesses.
+      description: View and update personal account settings.
+      operationId: getBusinessesByVendorId
+      parameters:
+        - name: vendorId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBusinessDTO'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/GetBusinessDTO'
           description: Successful response
         '401':
           description: Unauthorized
@@ -1509,6 +1545,9 @@ components:
           format: email
         password:
           type: string
+        role:
+          type: string
+          enum: ["client", "vendor", "admin"]
 
     UpdateServiceDTO:
       required:
@@ -1700,6 +1739,9 @@ components:
     GetBusinessDTO:
       type: object
       properties:
+        businessId:
+          type: integer
+          format: int64
         applicantId:
           type: integer
           format: int64
